--- a/pres-en/workshop10-pres-en.Rmd
+++ b/pres-en/workshop10-pres-en.Rmd
@@ -934,6 +934,8 @@ Partitions the variation of response variables among 2, 3, or 4 explanatory data
 ---
 # Variation partitioning in R
 
+To demonstrate how variation partitioning works in `R`, let us partition the variation of fish species composition between chemical and physiographic variables.
+
 .small[.alert[Note]: Make sure you've loaded the `vegan` package!
 
 ```{r}
@@ -947,7 +949,6 @@ spe.part.all$part # access results!
 
 ```{r, strip.white = TRUE, fig.width = 6, fig.height = 6}
 plot(spe.part.all,
-     frame = F, 
      Xnames = c("Chem", "Topo"), # name the partitions
      bg = c("seagreen3", "mediumpurple"), alpha = 80, # colour the circles
      digits = 2, # only show 2 digits
