First edits to match book and presentation content

--- a/book-en/references.bib
+++ b/book-en/references.bib
@@ -145,3 +145,17 @@
 	publisher = {Elsevier},
 	langid = {en}
 }
+
+@book{borcard2011,
+	title = {Numerical Ecology with R},
+	author = {{Borcard}, {Daniel} and {Gillet}, {François} and {Legendre}, {Pierre}},
+	year = {2011},
+	date = {2011},
+	publisher = {Springer-Verlag},
+	series = {Use R!},
+	doi = {10.1007/978-1-4419-7976-6},
+	url = {https://www.springer.com/gp/book/9781441979766},
+	note = {DOI: 10.1007/978-1-4419-7976-6},
+	address = {New York},
+	langid = {en}
+}
