--- a/book-en/09-linear-discriminant-analysis.Rmd
+++ b/book-en/09-linear-discriminant-analysis.Rmd
@@ -1,139 +1,189 @@
+---
+bibliography: references.bib
+---
+
 # Linear discriminant analysis
 
-Linear discriminant analysis (LDA) is a constrained (canonical)
-technique that allows you to determine how well your independent set of
-variables explains an a priori grouping. This grouping may have been
-obtained from a previous clustering analysis (see Workshop 8) or from a
-hypothesis (e.g. grouping is based on sites at different latitudes or
-different treatments). An LDA can also be used to classify new data into
-these pre-determined groups. You can imagine some useful applications of
-this technique including assessing which population a fish should be
-classified in based on morphology or classifying whether a new paper is
-a freshwater, marine or terrestrial study based on the abstract of
-papers in those pre-determined biomes.
+Linear discriminant analysis (LDA) is a constrained (canonical) technique that divides a response mtrix into groups according to a factor by finding combination of the variables that give **best possible separation between groups.** The grouping is done by maximizing the among-group dispersion versus the within-group dispersion. This allows you to determine how well your independent set of variables explains an *a priori* grouping, which may have been obtained from a previous clustering analysis (see [Workshop 9](https://github.com/QCBSRworkshops/workshop09)) or from a hypothesis (e.g. grouping is based on sites at different latitudes or different treatments).
 
-LDA computes discriminant functions from standardized descriptors. These
-coefficients quantify the relative contributions of the (standardized)
-explanatory variables to the discrimination of objects. Identification
-functions can be computed from the original (not standardized)
-descriptors to classify new data into pre-determined groups. Let's
-continue to work with the Doubs fish data. First we must ensure that the
-within-group covariance matrices of the explanatory variables are
-homogeneous -- a condition necessary for the application of LDA.
+An LDA computes discriminant functions from standardized descriptors. These coefficients quantify the relative contributions of the (standardized) explanatory variables to the discrimination of objects. Identification functions can be computed from the original (not standardized) descriptors to **classify new data into pre-determined groups**. There are several useful applications of this capacity to predict groupings, such as assessing which population a fish should be classified in based on morphology or classifying whether a new paper is a freshwater, marine or terrestrial study based on the abstract of papers in those pre-determined biomes.
 
-First we want to make an a priori classification that is independent
-from the environmental data set. We know that there is a general
-relationship that indicates environmental variables change with latitude
-(Budyko 1969). Here we will classify our Doubs fish sites based on
-latitude to determine how well the environmental factors explain our
-latitude grouping. Our groups are determined by simply dividing the
-range of latitudes equally into three groups and then assigning each
-site to a group depending on where they fall along the divided range.
+## LDA in R: Doubs River fish dataset
 
-```{r, echo = TRUE, eval = FALSE}
-#load spatial data to determine groups 
-spa <- read.csv ('http://www.davidzeleny.net/anadat-r/data-download/DoubsSpa.csv', row.names = 1)
-spa <- spa[,-8]
+We will continue to work with the Doubs River fish dataset to demonstrate how to implement a linear discriminant analysis in `R`. 
 
-#View spatial data 
-View (spa)
+### Making *a priori* groupings
 
-#add site numbers
-numbers<-(1:30)
-numbers<-numbers[!numbers%in%8] 
-spa$site<-numbers
+First, we want to make an *a priori* classification that is independent from the environmental data set. We know that environmental variables generally change with latitude. This might lead us to ask the following question: **If we classify our Doubs River sites according to latitude, how well do environmental variables explain these groupings?** To answer this question, we can make *a priori* groups by simply dividing the range of latitudes equally into three groups, and assigning each site to a group depending on where they fall along the divided range.
 
-#make groups based on lattitude y<82=group1, 82<y<156=group2, y>156=group3
-spa.group<-ddply(.data=spa, .variables=.(x, y, site), .fun= summarise, group = if(y <= 82) 1 else if (y <= 156) 2 else 3)
+Let us begin by loading spatial coordinates for the Doubs River sites.
 
-#order by site
-spa.group<-spa.group[with(spa.group, order(site)), ]
+```{r}
+# load spatial data for Doubs sites
+spa <- read.csv("data/doubsspa.csv", row.names = 1)
+spa$site <- 1:nrow(spa) # add site numbers
+spa <- spa[-8,] # remove site 8
 ```
 
-Generally, we would first want to check that the within-group covariance
-matrices of the explanatory variables are homogeneous by verifying
-multivariate homogeneity of within-group covariance (MHV). For the
-purposes of this workshop we will by pass it but more information can be
-found in Borcard et al. (2011).
+We can then assign sites into three groups based on their latitude.
 
-Once we run the LDA we can use the result object to determine 1. What
-groups the sites are classified in based on the environmental data. 2.
-What are the posterior probabilities of that the sites to belong to the
-groups. 3. The percentage of correct classification based on our
-latitudinal grouping.
+```{r}
+# group sites based on latitude
+spa$group <- NA # create "group" column
+spa$group[which(spa$y < 82)] <- 1
+spa$group[which(spa$y > 82 & spa$y < 156)] <- 2
+spa$group[which(spa$y > 156)] <- 3
+```
 
-```{r, echo = TRUE, eval = FALSE}
-#run LDA
-LDA<-lda(env,spa.group[,4])
+Let us quickly plot the latitude groupings to see if they make sense.
 
-#classification of the objects based on LDA
+```{r, fig.align = "center"}
+ggplot(data = spa) +
+  geom_point(aes(x = x, 
+                 y = y, 
+                 col = as.factor(group)), 
+             size = 4) +
+  labs(color = "Groups", 
+       x = "Longitude", 
+       y = "Latitude") +
+  scale_color_manual(values = c("#3b5896", "#e3548c", "#ffa600")) +
+  theme_classic() + # formatting the plot to make it pretty
+  theme(axis.title = element_text(size = 18),
+        axis.text = element_text(size = 16),
+        legend.title = element_text(size = 20),
+        legend.text = element_text(size = 18))
+```
+
+Now that we have our *a priori* groups, we would usually need to ensure the data meets a condition necessary for the application of LDA: the within-group covariance matrices of the explanatory variables must be homogeneous. To do this, we would use the `betadisper()` function in the `vegan` package to check the multivariate homogeneity of within-group variances before proceeding, as seen in @borcard2011. For the purposes of this workshop, we will move straight to doing the LDA.
+
+### Running the LDA
+
+```{r}
+# run the LDA grouping sites into latitude groups based on env data
+LDA <- lda(env, spa$group)
+```
+
+Our sites have now been reorganised into groups that are as distinct as possible, based on the environmental variables. We can plot the reorganised sites to visualise the results of the LDA.
+
+```{r}
+# predict the groupings
+lda.plotdf <- data.frame(group = spa$group, lda = predict(LDA)$x)
+```
+
+```{r fig.align = "center"}
+# Plot the newly reorganised sites according to the LDA
+ggplot(lda.plotdf) +
+  geom_point(aes(x = lda.LD1, 
+                 y = lda.LD2, 
+                 col = factor(group)), 
+             size = 4) +
+  labs(color = "Groups") +
+  scale_color_manual(values = c("#3b5896", "#e3548c", "#ffa600")) +
+  theme_classic() + # formatting the plot to make it pretty
+  theme(axis.title = element_text(size = 18),
+        axis.text = element_text(size = 16),
+        legend.title = element_text(size = 20),
+        legend.text = element_text(size = 18))
+```
+
+### Evaluating grouping accuracy
+
+Once we run the LDA, we can use the result object to determine:   
+
+* How sites are grouped based on the the environmental data, according to the LDA;  
+* The posterior probabilities of that the sites to belong to the groups;  
+* The percentage of correct classification based on our latitudinal grouping.
+
+```{r}
+# Classification of the objects based on the LDA
 spe.class <- predict(LDA)$class
 
-#posterior probabilities of the objects to belong to the groups
+# Posterior probabilities that the objects belong to those groups
 spe.post <- predict(LDA)$posterior
 
-#table of prior versus predicted classifications
-spe.table <- table(spa.group[,4], spe.class)
+# Table of prior vs. predicted classifications
+(spe.table <- table(spa$group, spe.class))
 
-#proportion of correct classification
+# Proportion of corrected classification
 diag(prop.table(spe.table, 1))
 ```
 
-![](images/lda_spetable.png){.align-center width="300"}
+All sites were correctly classified (*Proportion of corrected classification = 1*) into the latitude groups based on environmental variables.
 
-The results suggest that the environmental factors explain the first,
-lower latitude, group and the group 3 perfectly but only 83% of the
-group 2 sites were predicted correctly. What does that tell us about our
-classification? Perhaps there are stronger delineations in the lower and
-higher latitude and the group 2 is a mix of both?
+### Predictions
 
-Now what we have some new sites and we want to classify them based on
-the relationship we have established between our latitudinal grouping
-and environmental factors using the LDA. Using the predict() function we
-can load in a new matrix with sites and classify them using the LDA
-object.
+We can now use this relationship to classify **new** sites into latitude groups, based on the relationship we have established between our latitudinal grouping and environmental factors using the LDA. 
 
-Load in the classifyme.csv file, which contains dummy data from 5 new
-sites.
+Let us predict the groupings of **five** new sites in the dummy dataset `classifyme.csv` using the LDA object we computed above. To do this, we will use the `predict()` function.
 
-```{r, echo = TRUE, eval = FALSE}
-#predicting classification of new data 
-#read in new sites 
-classify.me<-read.csv("classifyme.csv", header = T)
+```{r}
+# Load the new site data
+classify.me <- read.csv("data/classifyme.csv", header = TRUE)
 
-#predict grouping of new data
-predict.group<-predict(LDA, newdata=classify.me)
+# Predict grouping of new sites
+predict.group <- predict(LDA, newdata = classify.me)
 
-#give classification for each new site
-group.new<-predict.group$class
+# View site classification
+predict.group$class
 ```
 
-![](images/lda_newgroups.png){.align-center width="200"}
+Our new sites, in order, have been classified in groups 1, 1, 1, 3 and 3 respectively.
 
-Our new sites, in order, have been classified in groups 1,1, 1, 3 and 3
-respectively.
+## Challenge 5
 
-**Challenge 5**: Run an LDA for the mite env data (only first two vars)
-based on four latitudinal groups you create from the mite.xy data set.
-What group was group 2 most incorrectly grouped into? What proportion of
-sites was correctly classified in group 1? group 2?
+Create four equally-spaced latitude groups in the `mite.xy` dataset. Then, run an LDA to classify mite sites into latitude groupings based on environmental variables (`SubsDens` and `WatrCont`). **What proportion of sites was correctly classified in group1? in group2?**
 
-**Challenge 5**: Solution
+To begin, load the `mite.xy` data:
+```{r}
+data(mite.xy)
+```
 
+Recall some useful functions:
+```{r, eval = FALSE}
+lda()
+predict()
+table()
+diag()
+```
 
+**Step 1:** Make four equally spaced latitude groups.
 
-```{r, echo = TRUE, eval = FALSE}
-mite.xy$site<-seq(1:70)
+```{r}
+# assign numbers to sites
+mite.xy$site <- 1:nrow(mite.xy)
+
+# figure out the spacing to make 4 equally spaced latitude groups 
 (max(mite.xy[,2])-min(mite.xy[,2]))/4
 
-mite.xy.group<-ddply(.data=mite.xy, .variables=.(x, y, site), .fun= summarise, group = if(y <= 2.5) 1 else if (y <= 4.9) 2 else if (y <= 7.3) 3 else 4)
-mite.xy.group<-mite.xy.group[with(mite.xy.group, order(site)), ]
+# use this to group sites into 4 latitude groups
+mite.xy$group <- NA # create "group" column
+mite.xy$group[which(mite.xy$y < 2.5)] <- 1
+mite.xy$group[which(mite.xy$y >= 2.5 & mite.xy$y < 4.9)] <- 2
+mite.xy$group[which(mite.xy$y >= 4.9 & mite.xy$y < 7.3)] <- 3
+mite.xy$group[which(mite.xy$y >= 7.3)] <- 4
+```
 
-LDA.mite<-lda(mite.env[,1:2],mite.xy.group[,4])
+**Step 2:** Run the LDA.
+```{r}
+LDA.mite <- lda(mite.env[,1:2], mite.xy$group)
+```
+
+**Step 3:** Check whether the groupings are correct.
+```{r}
+# group sites based on the LDA
 mite.class <- predict(LDA.mite)$class
-mite.post <- predict(LDA.mite)$posterior
-mite.table <- table(mite.xy.group[,4], mite.class)
+
+# get the table of prior versus predicted classifications
+(mite.table <- table(mite.xy$group, mite.class))
+```
+
+We can answer the challenge question with this part:
+
+```{r}
+# proportion of correct classification
 diag(prop.table(mite.table, 1))
 ```
 
+**So, what proportion of sites was correctly classified in group1? in group2?**  
 
+* **60%** were correctly classified into group1, and **64.7%** were classified into group2.
