--- a/book-en/references.bib
+++ b/book-en/references.bib
@@ -159,3 +159,21 @@
 	address = {New York},
 	langid = {en}
 }
+
+@article{de2002multivariate,
+  title={Multivariate regression trees: a new technique for modeling species--environment relationships},
+  author={De'Ath, Glenn},
+  journal={Ecology},
+  volume={83},
+  number={4},
+  pages={1105--1117},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@book{breiman1984classification,
+  title={Classification and regression trees},
+  author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
+  year={1984},
+  publisher={CRC press}
+}
