finish up the summary and additional resources list

--- a/book-en/references.bib
+++ b/book-en/references.bib
@@ -162,7 +162,7 @@
 
 @article{de2002multivariate,
   title={Multivariate regression trees: a new technique for modeling species--environment relationships},
-  author={De'Ath, Glenn},
+  author={De'ath, Glenn},
   journal={Ecology},
   volume={83},
   number={4},
@@ -176,4 +176,50 @@
   author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
   year={1984},
   publisher={CRC press}
+}
+
+@article{alday2014simple,
+  title={A simple test for alternative states in ecological restoration: the use of principal response curves},
+  author={Alday, Josu G and Marrs, Rob H},
+  journal={Applied Vegetation Science},
+  volume={17},
+  number={2},
+  pages={302--311},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{clarke2014change,
+  title={Change in marine communities: an approach to statistical analysis and interpretation},
+  author={Clarke, K Robert and Gorley, RN and Somerfield, Paul J and Warwick, RM},
+  year={2014},
+  publisher={Primer-E Ltd}
+}
+
+@book{gotelli2004primer,
+  title={A primer of ecological statistics},
+  author={Gotelli, Nicholas J and Ellison, Aaron M and others},
+  volume={1},
+  year={2004},
+  publisher={Sinauer Associates Sunderland}
+}
+
+@article{poulin2013new,
+  title={A new approach for tracking vegetation change after restoration: a case study with peatlands},
+  author={Poulin, Monique and Andersen, Roxane and Rochefort, Line},
+  journal={Restoration Ecology},
+  volume={21},
+  number={3},
+  pages={363--371},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+@book{legendre2012,
+	title = {Numerical Ecology},
+	author = {{Legendre}, {P.} and {Legendre}, {Louis}},
+	year = {2012},
+	month = {07},
+	date = {2012-07-21},
+	publisher = {Elsevier},
+	langid = {en}
 }
